<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_reminder"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    tools:context="com.example.maria.remindmewhere.AddLocationActivity">

    <TextView
        android:id="@+id/ara_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_edit_grey"
        android:drawablePadding="5dp"
        android:gravity="start|center_vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/name"/>

    <EditText
        android:id="@+id/ara_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/type_name"/>

    <TextView
        android:id="@+id/ara_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_edit_grey"
        android:drawablePadding="5dp"
        android:gravity="start|center_vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/description"/>

    <EditText
        android:id="@+id/ara_description_input"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:hint="@string/type_description"
        android:gravity="top|left"
        android:scrollHorizontally="false"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/ara_save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/colorTextIcons"
        android:background="@drawable/button_green_rounded_corners"
        android:onClick="saveReminder"/>

    <Button
        android:id="@+id/ara_delete_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/delete"
        android:textColor="@color/colorTextIcons"
        android:background="@drawable/button_grey_rounded_corners"
        android:onClick="deleteReminder"/>

</LinearLayout>

